--- a/rock_paper_scissors_messages.yml
+++ b/rock_paper_scissors_messages.yml
@@ -1,6 +1,6 @@
 welcome: "Welcome to RPS!"
 choose_name: "Please type a name for yourself:"
-goodbye: "Thanks for playing RPS!"
+goodbye: "Thanks for playing RPSLS!"
 choices: "Choose either rock, paper, scissors, lizard, or spock:"
 invalid_input: "Invalid input! Please try again."
 play_again: "Would you like to play again? (y/n)"
